--- a/css/main.css
+++ b/css/main.css
@@ -556,8 +556,14 @@ video {
   left: 0px;
   right: 0px;
 }
+.left-0 {
+  left: 0px;
+}
 .top-0 {
   top: 0px;
+}
+.top-1 {
+  top: 0.25rem;
 }
 .isolate {
   isolation: isolate;
@@ -567,6 +573,12 @@ video {
 }
 .z-50 {
   z-index: 50;
+}
+.order-first {
+  order: -9999;
+}
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 .-m-1 {
   margin: -0.25rem;
@@ -587,6 +599,9 @@ video {
 .mt-16 {
   margin-top: 4rem;
 }
+.mt-2 {
+  margin-top: 0.5rem;
+}
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -595,6 +610,21 @@ video {
 }
 .flex {
   display: flex;
+}
+.grid {
+  display: grid;
+}
+.contents {
+  display: contents;
+}
+.hidden {
+  display: none;
+}
+.aspect-\[4\/3\] {
+  aspect-ratio: 4/3;
+}
+.aspect-\[7\/5\] {
+  aspect-ratio: 7/5;
 }
 .h-4 {
   height: 1rem;
@@ -608,8 +638,23 @@ video {
 .h-full {
   height: 100%;
 }
+.w-0 {
+  width: 0px;
+}
 .w-5 {
   width: 1.25rem;
+}
+.w-64 {
+  width: 16rem;
+}
+.w-96 {
+  width: 24rem;
+}
+.w-\[24rem\] {
+  width: 24rem;
+}
+.w-\[37rem\] {
+  width: 37rem;
 }
 .w-auto {
   width: auto;
@@ -629,20 +674,49 @@ video {
 .max-w-lg {
   max-width: 32rem;
 }
+.max-w-none {
+  max-width: none;
+}
+.flex-auto {
+  flex: 1 1 auto;
+}
+.flex-none {
+  flex: none;
+}
 .transform {
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.items-start {
+  align-items: flex-start;
+}
 .items-center {
   align-items: center;
 }
+.justify-end {
+  justify-content: flex-end;
+}
 .justify-between {
   justify-content: space-between;
+}
+.gap-6 {
+  gap: 1.5rem;
 }
 .gap-x-1 {
   -webkit-column-gap: 0.25rem;
   -moz-column-gap: 0.25rem;
   column-gap: 0.25rem;
+}
+.gap-x-12 {
+  -webkit-column-gap: 3rem;
+  -moz-column-gap: 3rem;
+  column-gap: 3rem;
 }
 .gap-x-4 {
   -webkit-column-gap: 1rem;
@@ -654,8 +728,28 @@ video {
   -moz-column-gap: 1.5rem;
   column-gap: 1.5rem;
 }
+.gap-x-8 {
+  -webkit-column-gap: 2rem;
+  -moz-column-gap: 2rem;
+  column-gap: 2rem;
+}
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+.gap-y-16 {
+  row-gap: 4rem;
+}
+.self-end {
+  align-self: flex-end;
+}
+.overflow-hidden {
+  overflow: hidden;
+}
 .overflow-visible {
   overflow: visible;
+}
+.rounded-2xl {
+  border-radius: 1rem;
 }
 .rounded-full {
   border-radius: 9999px;
@@ -667,6 +761,10 @@ video {
 .bg-\[\#F0EAE4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(240 234 228 / var(--tw-bg-opacity));
+}
+.bg-gray-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .bg-gray-900\/10 {
   background-color: rgb(17 24 39 / 0.1);
@@ -680,6 +778,10 @@ video {
 }
 .stroke-gray-200 {
   stroke: #e5e7eb;
+}
+.object-cover {
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 .p-1 {
   padding: 0.25rem;
@@ -710,9 +812,16 @@ video {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+.pl-9 {
+  padding-left: 2.25rem;
 }
 .pt-14 {
   padding-top: 3.5rem;
@@ -720,6 +829,10 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-4xl {
   font-size: 2.25rem;
@@ -733,6 +846,10 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -741,6 +858,9 @@ video {
 }
 .leading-6 {
   line-height: 1.5rem;
+}
+.leading-7 {
+  line-height: 1.75rem;
 }
 .leading-8 {
   line-height: 2rem;
@@ -822,6 +942,40 @@ video {
     margin-top: 6rem;
   }
 
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:w-0 {
+    width: 0px;
+  }
+
+  .sm\:flex-auto {
+    flex: 1 1 auto;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:gap-8 {
+    gap: 2rem;
+  }
+
+  .sm\:gap-y-20 {
+    row-gap: 5rem;
+  }
+
+  .sm\:py-32 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+
+  .sm\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .sm\:text-8xl {
     font-size: 6rem;
     line-height: 1;
@@ -829,9 +983,25 @@ video {
 }
 @media (min-width: 1024px) {
 
+  .lg\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .lg\:col-end-1 {
+    grid-column-end: 1;
+  }
+
+  .lg\:col-end-2 {
+    grid-column-end: 2;
+  }
+
   .lg\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  .lg\:ml-auto {
+    margin-left: auto;
   }
 
   .lg\:mt-0 {
@@ -842,6 +1012,34 @@ video {
     display: flex;
   }
 
+  .lg\:contents {
+    display: contents;
+  }
+
+  .lg\:w-\[37rem\] {
+    width: 37rem;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:min-w-full {
+    min-width: 100%;
+  }
+
+  .lg\:max-w-lg {
+    max-width: 32rem;
+  }
+
+  .lg\:max-w-none {
+    max-width: none;
+  }
+
   .lg\:flex-1 {
     flex: 1 1 0%;
   }
@@ -850,16 +1048,24 @@ video {
     flex: 1 1 auto;
   }
 
-  .lg\:flex-shrink-0 {
-    flex-shrink: 0;
+  .lg\:flex-none {
+    flex: none;
   }
 
-  .lg\:flex-grow {
-    flex-grow: 1;
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
   }
 
   .lg\:justify-end {
     justify-content: flex-end;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
   }
 
   .lg\:gap-x-16 {
@@ -868,9 +1074,31 @@ video {
     column-gap: 4rem;
   }
 
+  .lg\:gap-x-8 {
+    -webkit-column-gap: 2rem;
+    -moz-column-gap: 2rem;
+    column-gap: 2rem;
+  }
+
+  .lg\:gap-y-16 {
+    row-gap: 4rem;
+  }
+
+  .lg\:gap-y-8 {
+    row-gap: 2rem;
+  }
+
+  .lg\:self-end {
+    align-self: flex-end;
+  }
+
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:pb-8 {
+    padding-bottom: 2rem;
   }
 
   .lg\:pt-24 {
